added additional styling

--- a/test_views/dashboard.html
+++ b/test_views/dashboard.html
@@ -45,18 +45,18 @@
         </form>
         <ul class="navbar-nav mr-auto ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">
+            <a class="nav-link nav-link2" href="#">
               <i class="fa fa-user-circle" aria-hidden="true"></i>
               User <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link nav-link2" href="#"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link nav-link2" href="#"
               >Create <span class="sr-only">(current)</span></a
             >
           </li>
@@ -178,36 +178,45 @@
                   <div class="col-xl-10">
                     <p>
                       Anim pariatur cliche reprehenderit, enim eiusmod high life
-                        accusamus terry richardson ad squid. Nihil anim keffiyeh
-                        helvetica, craft beer labore wes anderson cred nesciunt
-                        sapiente ea proident.</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa fa-thumbs-up" aria-hidden="true"></i> Like
-                          </button>
-                          <button
-                            type="button"
-                            class="btn btn-light"
-                          >  
-                          <i class="fa fa-comments" aria-hidden="true"></i>
-                          Comments
-                        </button>
+                      accusamus terry richardson ad squid. Nihil anim keffiyeh
+                      helvetica, craft beer labore wes anderson cred nesciunt
+                      sapiente ea proident.
+                    </p>
+                    <button type="button" class="btn btn-light">
+                      <i class="fa fa-thumbs-up" aria-hidden="true"></i> Like
+                    </button>
+                    <button type="button" class="btn btn-light">
+                      <i class="fa fa-comments" aria-hidden="true"></i>
+                      Comments
+                    </button>
                   </div>
                 </div>
-                <hr>
+                <hr />
                 <div class="comment-row row">
-                    <div class="col-xl-2 d-flex justify-content-center">
-                        <div class="user-circle-sm"></div>
+                  <div class="col-xl-2 d-flex justify-content-center">
+                    <div class="user-circle-sm"></div>
+                  </div>
+                  <div class="col-xl-10">
+                    <form action="">
+                      <div class="input-group mb-3">
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Your comment"
+                          aria-label="Recipient's username"
+                          aria-describedby="basic-addon2"
+                        />
+                        <div class="input-group-append">
+                          <button
+                            class="btn btn-outline-secondary"
+                            type="button"
+                          >
+                            Submit
+                          </button>
+                        </div>
                       </div>
-                    <div class="col-xl-10">
-                      <form action="">
-                          <div class="input-group mb-3">
-                              <input type="text" class="form-control" placeholder="Your comment" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                              <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button">Submit</button>
-                              </div>
-                            </div>
-                      </form>
-                    </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
