added PROFILE page

--- a/test_views/profile.html
+++ b/test_views/profile.html
@@ -212,7 +212,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-8 col-lg-8"></div>
+            <div class="col-xl-8 col-lg-8"> 
+              CONTENT 
+            </div>
           </div>
         </div>
       </div>
